--- a/top.css/approval.css
+++ b/top.css/approval.css
@@ -278,7 +278,7 @@
         }
         
         .btn-sm.active {
-            background-color: #007bff;
+            background-color: #22ff00;
             color: white;
         }
         
